# zrpc

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  Kconfig  README.rst  mypy.ini  requirements.txt
doc/: CMakeLists.txt  building.rst  concepts.rst  conf.py  doxyfile.in  index.rst  overview.rst  requirements.txt
doc/_doxygen/: doxygen-awesome-zrpc.css  groups.dox  header.html  mainpage.md
doc/_static/css/: custom.css
doc/_templates/: layout.html
doc/_templates/pdoc/: body.css  index.html.jinja2  module.html.jinja2  sidebar.css
doc/backends/: index.rst  virtio.rst
doc/binary/: index.rst
doc/configuration/: devicetree.rst  index.rst
doc/configuration/yaml/: channel.rst  index.rst  kwalify.rst  parameter.rst  rpc.rst
doc/generator/: index.rst  synthesis.rst  user_data.rst
dts/bindings/: vendor-prefixes.txt
dts/bindings/rpc/: zrpc,channel.yaml  zrpc,virtio-channel.yaml
include/zephyr/rpc/: zrpc-tlv.h  zrpc.h
samples/subsys/rpc/zrpc-virtio/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml  zrpc.yaml
samples/subsys/rpc/zrpc-virtio/boards/: nucleo_h755zi_q_stm32h755xx_m4.overlay  nucleo_h755zi_q_stm32h755xx_m7.overlay
samples/subsys/rpc/zrpc-virtio/src/: main.c
scripts/: requirements.txt
scripts/zrpc/: __init__.py  __main__.py  error.py  generate.py  main.py  rpc.py
scripts/zrpc/schemas/: core.yaml
scripts/zrpc/templates/: zrpc-channel-x.c.jinja2  zrpc-channel-x.h.jinja2  zrpc-channels.c.jinja2  zrpc-channels.h.jinja2  zrpc-lib.cmake.jinja2
subsys/: CMakeLists.txt  Kconfig
subsys/rpc/: CMakeLists.txt  Kconfig  Kconfig.zrpc  zrpc-tlv.c  zrpc-virtio.c  zrpc.c
zephyr/: module.yml
